# bevy-shader-showcase

./: Cargo.toml  README.md  build.rs  notes.md
assets/rust-gpu-shaders/: .gitignore
assets/shaders/: a_basic_color.wgsl  b_tex_coords.wgsl  c_circle.wgsl  d_animated.wgsl  e_texture.wgsl  extended_material.wgsl  f_discard.wgsl  g_blending.wgsl  h_normals.wgsl  i_diffuse_lighting.wgsl  j_ambient_lighting.wgsl  k_phong_lighting.wgsl  n_pbr_animated.wgsl  n_pbr_baseline.wgsl  n_pbr_cell_shaded.wgsl
assets/textures/: readme.md
rust-gpu-shaders/: Cargo.toml
rust-gpu-shaders/src/: lib.rs
rust-gpu-shaders/src/shaders/: a_basic_color.rs  b_tex_coords.rs  c_circle.rs  mod.rs
src/: base_plane.rs  camera_controller.rs  double_sided.rs  extended_material.rs  learn_opengl_pbr_materials.rs  main.rs  scene_setup.rs
src/custom_shaders/: a_basic_color.rs  b_tex_coords.rs  c_circle.rs  d_animated.rs  e_texture.rs  f_blending.rs  f_discard.rs  g_blending.rs  h_normals.rs  i_diffuse_lighting.rs  j_ambient_lighting.rs  k_phong_lighting.rs  l_pbr_base_color.rs  m_pbr_materials.rs  mod.rs  n_pbr_animated.rs  n_pbr_shaders.rs  o_pbr_cell_shaded.rs
