[workspace]
members = ["rust-gpu-shaders"]

[package]
name = "bevy-shader-showcase"
version = "0.1.0"
edition = "2021"

[features]
rust-gpu = ["dep:cargo-gpu"]

[dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "bevy_gltf", "file_watcher"] }

[build-dependencies]
cargo-gpu = { git = "https://github.com/rust-gpu/cargo-gpu", rev = "39512e387f9e07fe87a588713d479b8bab9e8efd", optional = true }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[patch."https://github.com/rust-gpu/rust-gpu"]
# why can you still not specify a different rev for a dependency?
rustc_codegen_spirv-target-specs = { git = "https://github.com/rust-gpu/rust-gpu?", rev = "c3d5ffd7a9d26c4a5b106c23999e801cfc05f211" }
